tdf#135367 enable_toggle_buttons sets SvTreeFlags::CHKBTN

designating that the special auto-sized toggle column is in use

Change-Id: I23aa927c56e706590f397d15ef7329d20e0b18a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100136
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>